* 0.12.0 (unreleased)
   * Gameplay
      * Excess energy to battery recharge efficiency is now a flat 50% instead of varying based on charge level
      * Gave the Za'lek sting a slight detection buff
   * Quality of Life
      * Added colourblind correction mode
      * Exposed more colourblind options to the user
      * Can modify game speed directly instead of using a slow mode difficulty for accessibility
      * Messages get folded instead of repeating
      * Asteroids no longer fade out if close to the player
      * Display fuel consumption for ships in the equipment overlay
      * Added option to match speed with slowest ship in the fleet (on by default)
      * Made it so ships in the equipment screen do not change order based on value
      * Mark spaceport bar tab when there is an important NPC
   * Content
      * 1 new mission
         * Hack the Gibson!
      * New portraits
   * Engine
      * Stats (except inverted stats) are now additive instead of multiplicative
      * Try to merge saves if multiple directories correspond to the same player
      * More robust weapon set support that can handle multiple overlapping weapon sets
      * Faster handling of asteroids with large exclusion areas
      * Added fuel_usage_mod ship stat
      * Fixed player losing navigation targets when unidiff is applied
      * Fixed ai.idir giving wrong answer by M_PI_2 in some cases
      * Threaded more loading components
      * Lua require now caches chunks
      * Dropped SDL_image fallback
      * Use higher internal timer for all platforms
      * Support for Tracy
      * Warn the player if they try to use a name with all space characters
      * Decoupled the collision system from the rendering system
      * Support for 3D models with fancy new effects
      * Added a low memory mode to use fewer and smaller textures with 3D
      * Lazy load ship and outfit graphics to reduce memory usage and decrease load time
   * Fixes